--- a/config/_default/params.toml
+++ b/config/_default/params.toml
@@ -10,12 +10,12 @@ defaultAppearance = "dark" # valid options: light or dark
 autoSwitchAppearance = true
 
 enableSearch = true
-enableCodeCopy = false
+enableCodeCopy = true
 
-# mainSections = ["section1", "section2"]
+# mainSections = ["people"]
 # robots = ""
 
-disableImageOptimization = false
+disableImageOptimization = true
 
 # defaultBackgroundImage = "IMAGE.jpg" # used as default for background images 
 # defaultFeaturedImage = "IMAGE.jpg" # used as default for featured images in all articles
@@ -89,7 +89,7 @@ defaultFeaturedImage = "/img/bkg_images/bkgimage.jpeg"
   showTableOfContents = true
   showCards = true
   groupByYear = true
-  cardView = true
+  cardView = false
   cardViewScreenWidth = false
   constrainItemsWidth = false
 
